--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,6 +5,10 @@
             box-shadow: none !important;
 }
 
+body { 
+    font-size: 120% !important; 
+}
+
 .modal-footer {
 	justify-content: flex-start !important;
 }
